--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link  rel="stylesheet" href="style.css"/>
-  <script defer src="script.js"></script>
+  <link  rel="stylesheet" href="./style.css"/>
+  <script defer src="./script.js"></script>
   
   <title>Frontend Mentor | Article preview component</title>
 </head>
@@ -44,7 +44,7 @@
               <img src="images/icon-twitter.svg"/>
               <img src="images/icon-pinterest.svg"/>
        </div>
-       <a  id="social-share" class="share-link" href="#">
+      <a  id="social-share" class="share-link" href="#">
          <figure>
                  <img class="share white-filter"   src="images/icon-share.svg" alt="share icon image" />
           </figure>
