Making img tag accessible

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             to help you make any room feel complete.</p>
        </div>
        <div class="profile-info">
-                  <img  id='profile-photo' src="images/avatar-michelle.jpg" />
+                  <img  id='profile-photo' src="images/avatar-michelle.jpg"  alt="profile photo"/>
                   <div class="person-info">
                              <p class="name">Michelle Appleton</p>
                              <p class="date">28 Jun 2020</p>
@@ -40,9 +40,9 @@
        <div class="social-links">
         <div class="socials" >
               <p>SHARE</p>
-              <img src="images/icon-facebook.svg" />
-              <img src="images/icon-twitter.svg"/>
-              <img src="images/icon-pinterest.svg"/>
+              <img src="images/icon-facebook.svg" alt="facebook icon"/>
+              <img src="images/icon-twitter.svg" alt="twitter icon"/>
+              <img src="images/icon-pinterest.svg" alt="pininterest icon"/>
        </div>
       <a  id="social-share" class="share-link" href="#">
          <figure>
